# rust-lib-template

./: Cargo.toml  flake.nix  shell.nix
src/: args.rs  error.rs  lib.rs  main.rs  prelude.rs
